--- a/account_payment_term_discount/wizard/account_payment_register.xml
+++ b/account_payment_term_discount/wizard/account_payment_register.xml
@@ -4,10 +4,16 @@
         <field name="model">account.payment.register</field>
         <field name="inherit_id" ref="account.view_account_payment_register_form" />
         <field name="arch" type="xml">
-            <field name="partner_bank_id" position="before">
-                <field name="invoice_id" invisible="1" />
-                <field name="discount_amt" invisible="1" />
-            </field>
+
+                <field name="partner_bank_id" position="before">
+                    <t t-if="invoice_id">
+                        <field name="invoice_id" invisible="1" />
+                        <field name="discount_amt" invisible="1" />
+                    </t>
+                    <t t-elif="invoices">
+                        <field name="move_ids" />
+                    </t>
+                </field>
         </field>
     </record>
 </odoo>
