--- a/account_payment_term_discount/wizard/account_payment_register.xml
+++ b/account_payment_term_discount/wizard/account_payment_register.xml
@@ -1,19 +1,27 @@
+<?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
     <record id="view_account_payment_term_form" model="ir.ui.view">
         <field name="name">account.payment.term.form</field>
         <field name="model">account.payment.register</field>
         <field name="inherit_id" ref="account.view_account_payment_register_form" />
         <field name="arch" type="xml">
-
-                <field name="partner_bank_id" position="before">
-                    <t t-if="invoice_id">
-                        <field name="invoice_id" invisible="1" />
-                        <field name="discount_amt" invisible="1" />
-                    </t>
-                    <t t-elif="invoices">
-                        <field name="move_ids" />
-                    </t>
-                </field>
+            <xpath expr="//footer" position="before">
+                <notebook>
+                    <page string="Invoices to be Paid">
+                        <field name="payment_line_ids">
+                            <tree string="Invoices to Pay" editable="bottom" create="0" delete="0">
+                                <field name="invoice_date"/>
+                                <field name="ref"/>
+                                <field name="amount_total"/>
+                                <field name="discount_pct"/>
+                                <field name="discount_amt"/>
+                                <field name="payment_amt"/>
+                            </tree>
+                        </field>
+                    </page>
+                </notebook>
+            </xpath>
         </field>
     </record>
+
 </odoo>
