Changes to get calculation working. Not quite there.

--- a/account_payment_term_discount/wizard/account_payment_register.xml
+++ b/account_payment_term_discount/wizard/account_payment_register.xml
@@ -16,6 +16,7 @@
                                 <field name="discount_pct"/>
                                 <field name="discount_amt"/>
                                 <field name="payment_amt"/>
+                                <field name="reconcile"/>
                             </tree>
                         </field>
                     </page>
