Latest changes debugging account_payment_register.py

--- a/account_payment_term_discount/views/account_move_view.xml
+++ b/account_payment_term_discount/views/account_move_view.xml
@@ -34,6 +34,7 @@
         <field name="inherit_id" ref="account.view_invoice_tree" />
         <field name="arch" type="xml">
             <field name="invoice_date_due" position="after">
+                <field name="discount_taken" />
                 <field name="discount_amt" />
                 <field name="discount_date" />
             </field>
